sumo/tests/sumo/output/e2/errors/length_too_high/errors.sumo
Error: The length of detector '4/1to3/1' lies beyond the lane's '4/1to3/1_0' length.
Quitting (on error).
